<resources>
    <string name="app_name">CoinTask</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="news_title">title</string>
    <string name="article_thumb">article_thumb</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="saved">Saved</string>
    <string name="save_article">Save article</string>
    <string name="badge_title">Badge Title</string>
    <string name="time_views">Time • Views</string>
</resources>
